Correct align full Gutenberg block width

--- a/css/src/_wordpress.scss
+++ b/css/src/_wordpress.scss
@@ -1,10 +1,14 @@
 /* Button Block Arrow */
 .wp-block-uagb-column h3.has-text-color {
-   @extend %arrow-right;
+	@extend %arrow-right;
 
-   white-space: nowrap; /* Customization */
+	white-space: nowrap; /* Customization */
 
-   &::after {
-      margin-left: 0;
-   }
+	&::after {
+		margin-left: 0;
+	}
+}
+
+.full-width-content .alignfull {
+	width: auto;
 }
